--- a/homepg.css
+++ b/homepg.css
@@ -91,7 +91,7 @@ body {
   display: none;
 }
 
-.subscr_logo{
+.subscr_logo {
   color: #fff;
   font-size: 18px;
   text-decoration: none;
@@ -326,7 +326,7 @@ body {
   margin-left: 240px;
   margin-top: 7px;
 }
- #title #city {
+#title #city {
   color: rgb(255, 255, 255);
   background: none;
   border-top: none;
@@ -706,4 +706,497 @@ body {
   #title #journey a {
     font-size: 10px;
   }
+}
+
+/*.......................MIDDLE PART OF HOME PAGE................................ */
+
+.middle {
+  padding: 0%;
+}
+#supermillerhead {
+  margin-top: 300px;
+  width: 100vw;
+  height: 100vh;
+  background: url(/img/car_bg.jpg);
+  background-size: cover;
+  background-color: black;
+}
+
+.img1 {
+  background-size: cover;
+  width: 100%;
+  height: 595px;
+  color: #fff;
+}
+
+#supermillerhead h2 {
+  text-align: center;
+  padding-top: 30px;
+
+  font-size: 24px;
+  text-transform: uppercase;
+  margin: 0;
+
+  /* position: absolute; */
+  top: 20px;
+  left: 40%;
+
+  color: #fff;
+}
+
+.title {
+  text-align: center;
+  font-size: 18px;
+  margin: 0;
+
+  /* position: absolute; */
+
+  padding-top: 70px;
+  top: 20px;
+  left: 30%;
+
+  color: #fff;
+}
+
+.carList {
+  margin-top: 100px;
+}
+.row {
+  /* display: flex;
+    -ms-flex-pack: distribute;
+    justify-content: space-around; */
+
+  /* position: absolute; */
+
+  padding-top: 70px;
+  top: 120px;
+  left: 220px;
+  right: 220px;
+
+  color: #fff;
+
+  display: none;
+}
+
+.row .carimg {
+  height: 150px;
+
+  float: left;
+}
+.row .name {
+  font-size: 60px;
+}
+
+.row .price {
+  font-size: 25px;
+}
+
+.row .groups {
+  font-size: 18px;
+}
+
+.changep {
+  font-size: 30px;
+  text-align: center;
+  font-weight: bold;
+  color: whitesmoke;
+  margin-left: 0%;
+}
+
+.arrow {
+  top: 0;
+  height: 120px;
+  width: 120px;
+  border: 0;
+  border-right: 1px solid #fff;
+  border-bottom: 1px solid #fff;
+  display: inline-block;
+  cursor: pointer;
+}
+
+.left {
+  transform: rotate(130deg);
+  margin-left: 50px;
+}
+
+.right {
+  transform: rotate(-45deg);
+  margin-left: 1200px;
+}
+
+.howItWorks {
+  text-align: center;
+}
+
+.howItWorks .h2 {
+  color: #666;
+  justify-content: center;
+}
+
+.blocks {
+  width: auto;
+
+  display: flex;
+  padding: 50px 0;
+  justify-content: center;
+}
+
+.blocks div {
+  width: 220px;
+  height: 200px;
+  padding: 10px;
+  border-radius: 8px;
+  background-color: #fff;
+  box-shadow: 0 12px 22px 2px rgb(0 0 0 / 10%);
+  border: 1px solid #eee;
+  margin: 0 10px;
+}
+
+.blocks div h4 {
+  font-weight: normal;
+}
+
+.blocks div p {
+  font-weight: lighter;
+}
+
+.signbtn {
+  padding: 10px 60px;
+  border: 1px solid #666;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: #323a44;
+  border-radius: 3px;
+}
+
+.apps {
+  margin-top: 40px;
+  width: 100%;
+  height: 602px;
+  align-items: center;
+}
+
+.zoomGo {
+  width: 70%;
+  margin: -350px auto;
+  position: relative;
+}
+
+.store {
+  display: block;
+}
+
+.store a {
+  display: inline-block;
+  width: 140px;
+  height: 42px;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+.imgdiv {
+  display: grid;
+  /* padding: 50px; */
+
+  grid-template-columns: 225px 225px 225px 225px 225px;
+  grid-template-rows: 60px 30px 45px;
+
+  grid-gap: 25px;
+  /* justify-content: center; */
+
+  margin-left: 80px;
+
+  align-items: center;
+}
+
+.imgdiv img {
+  height: 75px;
+  align-content: center;
+  margin: auto;
+}
+
+.imgdiv b {
+  font-size: 30px;
+  font-weight: 600;
+  margin: auto;
+}
+
+.imgdiv p {
+  font-size: 18px;
+  margin: auto;
+  text-align: center;
+}
+.imgdiv p span {
+  text-align: left;
+}
+
+/* LAST PART */
+#last {
+  width: 100%;
+  position: relative;
+}
+#last .bg_image {
+  height: 500px;
+  width: 100vw;
+  text-align: center;
+  position: relative;
+}
+#last .quotation {
+  width: 100px;
+  height: 90px;
+  /* margin: -400px -146px; */
+  display: inline-block;
+  position: absolute;
+  top: 70px;
+  left: 400px;
+  background-repeat: no-repeat;
+}
+#last .items {
+  color: whitesmoke;
+  position: relative;
+  width: 90vw;
+}
+#last .item {
+  font-size: 35px;
+  width: 80vw;
+  display: none;
+  position: absolute;
+  top: -325px;
+  left: 200px;
+}
+
+#last .item > div {
+  font-size: 50px;
+  font-weight: 700;
+  color: #5eb32d;
+}
+#last .items .arrow {
+  position: absolute;
+  height: 100px;
+  width: 100px;
+  cursor: pointer;
+  top: -300px;
+  border-bottom: 1px solid whitesmoke;
+  border-right: 1px solid whitesmoke;
+}
+#last .items .arrow.left {
+  transform: rotate(135deg);
+  left: 40px;
+}
+#last .items .arrow.right {
+  transform: rotate(-45deg);
+  right: -150px;
+}
+#last .press {
+  margin-top: 100px;
+  position: relative;
+  width: 100%;
+}
+#last .press .arrow {
+  position: absolute;
+  top: 20px;
+  height: 20px;
+  width: 20px;
+  border-right: 3px solid black;
+  border-bottom: 3px solid black;
+  cursor: pointer;
+}
+#last .press .arrow.left {
+  transform: rotate(135deg);
+  left: 40px;
+}
+#last .press .arrow.right {
+  transform: rotate(-45deg);
+  right: 75px;
+}
+#last .wrap {
+  width: 950px;
+  padding: 0 20px;
+  /* transform-style: preserve-3d; */
+}
+#last .wrap .slides {
+  /* display: grid; */
+  /* display: none; */
+  /* grid-template-columns: auto auto auto auto;
+         grid-template-rows: auto; */
+  position: absolute;
+  display: none;
+  margin: auto;
+  padding: 0 2vw;
+}
+#last .wrap .slides .active {
+  display: block;
+}
+#last .wrap .slides > .container {
+  width: 350px;
+  height: 100px;
+  padding: 0 20px;
+  margin-left: 2vw;
+  align-content: center;
+}
+#last .wrap .slides .grid {
+  display: grid;
+  grid-template-columns: 400px 400px 400px 400px;
+  grid-template-rows: auto;
+  margin-left: 150px;
+}
+#last .wrap .slides img {
+  width: auto;
+  height: 50px;
+}
+
+/* .icon01 {
+         /* background-position: 0 35%; */
+
+/* width: 200px;
+         height: 50px; } */
+
+#last .footer {
+  background-color: rgb(51, 65, 79);
+  color: white;
+  margin-top: 230px;
+  height: 1750px;
+  width: 100%;
+  padding-top: 20px;
+}
+#last .footer .Button {
+  display: grid;
+
+  grid-template-columns: 400px 400px 400px 400px;
+
+  grid-template-rows: auto;
+  margin-left: 100px;
+  font-size: 18px;
+}
+#last .footer .Button button {
+  width: 400px;
+  border: thin;
+  background-color: rgb(51, 65, 79);
+  height: 150px;
+}
+#last .footer .Button .link {
+  /* border: 1px solid white; */
+  /* margin-left: 100px;
+         width: 400px;
+         height: 150px; */
+  align-content: center;
+}
+#last .footer .Button .link img {
+  width: 50px;
+  padding-bottom: 5px;
+}
+#last .footer .Button button p {
+  font-size: 25px;
+  font-family: sans-serif;
+  font-weight: 200;
+  text-align: center;
+  text-decoration: none;
+  color: white;
+}
+#last .footer h4 {
+  text-align: center;
+  font-weight: 200;
+  font-size: 25px;
+  margin-left: 100px;
+  color: white;
+}
+#last .footer .aboutus {
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  grid-template-rows: auto auto;
+  grid-gap: 20px;
+  padding: 10px;
+  margin-left: 100px;
+}
+#last .footer .aboutus a {
+  color: white;
+  margin-left: 50px;
+  font-size: 22px;
+  text-decoration: none;
+}
+#last .footer .cities {
+  display: grid;
+  grid-template-columns: 400px 400px 400px 400px;
+  grid-template-rows: 50px 50px 50px 50px 50px 50px 50px;
+  /* padding: 20px; */
+  grid-gap: 20px;
+  padding: 10px;
+  margin-left: 100px;
+}
+#last .footer .cities .help {
+  margin-left: 50px;
+  font-size: 23px;
+  font-family: sans-serif;
+  color: white;
+  text-decoration: none;
+}
+#last .footer .cities a {
+  color: white;
+  /* margin-left: 50px; */
+  font-size: 22px;
+  text-decoration: none;
+}
+
+#last .footer .airport {
+  display: grid;
+  grid-template-columns: 400px 400px 400px 400px;
+  grid-template-rows: 50px 50px 50px 50px 50px 50px 50px;
+  /* padding: 20px; */
+  grid-gap: 20px;
+  padding: 10px;
+  margin-left: 100px;
+}
+#last .footer .airport a {
+  margin-left: 50px;
+  color: white;
+  font-size: 22px;
+  text-decoration: none;
+}
+
+#last .footer hr {
+  margin-top: -50px;
+  height: 2px;
+}
+#last .footer .address {
+  margin-left: 100px;
+}
+#last .footer .social img {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
+#last .footer .address h4 {
+  text-align: left;
+  margin-left: 20px;
+  font-size: 20px;
+  color: rgb(173, 179, 184);
+}
+#last .footer .address p {
+  font-size: 20px;
+  color: rgb(173, 179, 184);
+  margin-left: 20px;
+}
+#last .address .social {
+  display: grid;
+  grid-template-columns: 50px 50px 50px 50px 50px 50px;
+  grid-template-rows: auto;
+  grid-gap: 20px;
+  padding: 20px;
+}
+#last .footer .content {
+  background-color: white;
+  color: rgb(56, 54, 54);
+  margin-left: 100px;
+  margin-top: 50px;
+  width: 80vw;
+  font-size: 22px;
+}
+#last .footer .content a {
+  text-decoration: none;
+  color: green;
+}
+#last .footer .content h3 {
+  font-weight: 700;
+  font-size: 30px;
+  font-family: sans-serif;
 }
