--- a/homepg.css
+++ b/homepg.css
@@ -719,7 +719,6 @@ body {
   height: 100vh;
   background: url(/img/car_bg.jpg);
   background-size: cover;
-  background-color: black;
 }
 
 .img1 {
@@ -744,14 +743,14 @@ body {
   color: #fff;
 }
 
-.title {
+.title_para {
   text-align: center;
   font-size: 18px;
   margin: 0;
 
   /* position: absolute; */
 
-  padding-top: 70px;
+  padding-top: 20px;
   top: 20px;
   left: 30%;
 
@@ -760,6 +759,10 @@ body {
 
 .carList {
   margin-top: 100px;
+}
+
+.carList{
+    width: 70%;
 }
 .row {
   /* display: flex;
@@ -779,20 +782,26 @@ body {
 }
 
 .row .carimg {
+    margin-top: -180px;
+    margin-left: 150px;
   height: 150px;
 
   float: left;
 }
 .row .name {
+    margin-top: -250px;
+    margin-left: 450px;
   font-size: 60px;
 }
 
 .row .price {
-  font-size: 25px;
+  font-size: 22px;
+  margin-left: 450px;
 }
 
 .row .groups {
   font-size: 18px;
+  margin-left: 450px;
 }
 
 .changep {
@@ -800,7 +809,7 @@ body {
   text-align: center;
   font-weight: bold;
   color: whitesmoke;
-  margin-left: 0%;
+  margin-left: 170px;
 }
 
 .arrow {
@@ -815,11 +824,13 @@ body {
 }
 
 .left {
+    margin-top: 120px;
   transform: rotate(130deg);
   margin-left: 50px;
 }
 
 .right {
+    margin-top: -480px;
   transform: rotate(-45deg);
   margin-left: 1200px;
 }
@@ -929,7 +940,6 @@ body {
 .imgdiv p span {
   text-align: left;
 }
-
 /* LAST PART */
 #last {
   width: 100%;
