--- a/homepg.css
+++ b/homepg.css
@@ -76,7 +76,7 @@ body {
   text-align: center;
   align-items: center;
 }
-#sub_det_item .arrow {
+#sub_det_item .arrowmiddle {
   position: absolute;
   width: 11px;
   height: 11px;
@@ -143,7 +143,7 @@ body {
   font-size: 12px;
   text-align: center;
 }
-.arrow2 {
+.arrowmiddle2 {
   position: absolute;
   width: 11px;
   height: 11px;
@@ -190,7 +190,7 @@ body {
   font-size: 12px;
   text-align: center;
 }
-.arrow3 {
+.arrowmiddle3 {
   position: absolute;
   width: 11px;
   height: 11px;
@@ -229,7 +229,7 @@ body {
 #navbar .item:hover > .mob_det {
   display: block;
 }
-.arrow4 {
+.arrowmiddle4 {
   position: absolute;
   width: 11px;
   height: 11px;
@@ -815,7 +815,7 @@ body {
   margin-left: 170px;
 }
 
-.arrow {
+.arrowmiddle {
   top: 0;
   height: 120px;
   width: 120px;
@@ -826,14 +826,14 @@ body {
   cursor: pointer;
 }
 
-.left {
+.leftmiddle {
   margin-top: 0px;
   transform: rotate(130deg);
   margin-left: 110px;
 }
 
-.right {
-  margin-top: -480px;
+.rightmiddle {
+  margin-top: -121px;
   transform: rotate(-45deg);
   margin-left: 1200px;
 }
@@ -919,7 +919,7 @@ body {
   grid-gap: 19px;
   /* justify-content: center; */
 
-  margin-left: 80px;
+  margin-left: 0px;
 
   align-items: center;
 }
