--- a/homepg.css
+++ b/homepg.css
@@ -477,7 +477,7 @@ body {
   color: black;
 }
 
-/* POP UP ThINGS*/
+/* POP UP ThINGS for sign up*/
 #pop1 {
   width: 100%;
   height: 100%;
@@ -532,9 +532,9 @@ body {
   color: gray;
   margin-left: 50px;
 }
-#zoomPromo3 {
+/* #zoomPromo3 {
   margin-right: 50px;
-}
+} */
 #zoomPromo1 h2,
 #zoomPromo2 h2,
 #zoomPromo3 h2 {
@@ -609,29 +609,6 @@ body {
   transform: rotate(45deg);
   cursor: pointer;
 }
-/*CSS for automatic navigation
-       #bullet_slider{
-        padding-top: 50px;
-        width: 30%;
-        display: flex;
-        margin: auto;
-      }
-      #bullet_slider input{
-        width: 10px;
-        height: 10px;
-        border-radius: 10px;
-        margin-left: 5px;
-        transition: 1s;
-      }
-      #radio1:checked ~ .radio_btn{
-        background-color: green;
-      }
-      #radio2:checked ~ .radio_btn{
-        background-color: green;
-      }
-      #radio3:checked ~ .radio_btn{
-        background-color: green;
-      }*/
 
 /*pop up auto slider things*/
 .slider {
@@ -675,6 +652,216 @@ body {
 }
 #radio3:checked ~ .navigation_auto .auto-btn3 {
   background-color: rgb(31, 230, 31);
+}
+
+.sign_up_topr_box1 {
+}
+.sign_up_botr_box1 {
+  width: 300px;
+  height: 380px;
+  margin: 10px auto;
+  background-color: rgb(233, 233, 233);
+  padding: 20px 40px;
+  box-sizing: border-box;
+  border-radius: 5px;
+}
+
+.sign_up_botr_box1 form input {
+  display: block;
+  margin: 20px 0;
+  width: 220px;
+  height: 30px;
+  border-radius: 3px;
+}
+.deta_add_btn {
+  width: 230px;
+  height: 30px;
+  background: greenyellow;
+  border: 2px solid greenyellow;
+  border-radius: 5px;
+}
+/*LOGIN POP UP BY TWO*/
+#pop2 {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  position: absolute;
+  top: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /*position: fixed;*/
+  display: none;
+}
+.log_in_cont2 {
+  width: 800px;
+  height: 500px;
+  background-color: white;
+  border-radius: 4px;
+  padding: 20px 10px;
+  display: flex;
+  position: relative;
+}
+
+#zoomPromo12,
+#zoomPromo22,
+#zoomPromo32 {
+  width: 320px;
+  height: 450px;
+  padding: 40px 20px;
+  box-sizing: border-box;
+  text-align: center;
+  border-radius: 4px;
+  border: 2px solid gray;
+  box-shadow: 0px 2px 2px 2px grey;
+  color: gray;
+  margin-left: 50px;
+}
+/* #zoomPromo3 {
+  margin-right: 50px;
+} */
+#zoomPromo12 h2,
+#zoomPromo22 h2,
+#zoomPromo32 h2 {
+  color: black;
+}
+#zoomPromo12 .zc_12 img,
+#zoomPromo22 .zc_12 img,
+#zoomPromo32 .zc_12 img {
+  width: 100px;
+  height: 100px;
+}
+.log_in_cont2 .log_right2 {
+  width: 450px;
+  text-align: center;
+}
+.log_r_top2 {
+  margin-top: 20px;
+}
+.log_r_top_cont2 {
+  height: 200px;
+  margin-left: 5px;
+  border-bottom: 1px solid rgb(255, 253, 253);
+  box-shadow: 0 1px 0px 0 rgb(211, 210, 210);
+}
+.log_r_top_cont_face2 {
+  background-color: blue;
+  margin: 20px auto 20px;
+  width: 300px;
+  height: 20px;
+  padding: 12px 0;
+  color: white;
+}
+.log_r_top_cont2 a {
+  text-decoration: none;
+  color: white;
+}
+.log_r_top_cont_gmail2 {
+  background-color: red;
+  margin: 20px auto 20px;
+  width: 300px;
+  color: white;
+  height: 20px;
+  padding: 12px 0;
+}
+.log_r_top_cont2 a {
+  text-decoration: none;
+  color: white;
+}
+.log_r_bot2 {
+  height: 190px;
+}
+.btn_log_sub2 {
+  background: url(img/log_sub_btn.png) no-repeat top left / cover;
+  width: 70px;
+  height: 70px;
+  border: none;
+  margin-top: 20px;
+}
+.log_input_email_mob2 {
+  margin-top: 20px;
+  width: 300px;
+  height: 35px;
+  border-radius: 5px;
+  border: 2px solid grey;
+}
+.close12 {
+  position: absolute;
+  font-size: 35px;
+  font-weight: 600;
+  top: 0;
+  right: 14px;
+  transform: rotate(45deg);
+  cursor: pointer;
+}
+
+/*pop up auto slider things*/
+.slider22 {
+  width: 400px;
+}
+.slides22 {
+  overflow: hidden;
+  display: flex;
+}
+.slides22 input {
+  display: none;
+}
+.slide22 {
+  width: 100%;
+  transition: 1s;
+}
+
+/*CSS for automatic navigation  */
+.navigation_auto2 {
+  position: absolute;
+  display: flex;
+  width: 400px;
+  justify-content: center;
+}
+.navigation_auto2 div {
+  border: 2px solid gray;
+  padding: 5px;
+  border-radius: 10px;
+  transition: 0.5s;
+  margin-top: 400px;
+  background-color: rgb(207, 206, 206);
+}
+.navigation_auto2 div:not(:last-child) {
+  margin-right: 5px;
+}
+#radio12:checked ~ .navigation_auto2 .auto-btn12 {
+  background-color: rgb(31, 230, 31);
+}
+#radio22:checked ~ .navigation_auto2 .auto-btn22 {
+  background-color: rgb(31, 230, 31);
+}
+#radio32:checked ~ .navigation_auto2 .auto-btn32 {
+  background-color: rgb(31, 230, 31);
+}
+
+.login_botr_box1 {
+  width: 300px;
+  height: 200px;
+  margin: 70px auto;
+  background-color: rgb(233, 233, 233);
+  padding: 20px 40px;
+  box-sizing: border-box;
+  border-radius: 5px;
+}
+
+.login_botr_box1 form input {
+  display: block;
+  margin: 20px 0;
+  width: 220px;
+  height: 30px;
+  border-radius: 3px;
+}
+.deta_add_btn {
+  width: 230px;
+  height: 30px;
+  background: greenyellow;
+  border: 2px solid greenyellow;
+  border-radius: 5px;
 }
 
 @media only screen and (max-width: 700px) {
