--- a/homepg.css
+++ b/homepg.css
@@ -339,7 +339,7 @@ body {
 #home #front_intro {
   padding: 0%;
   margin: 0%;
-  width: 100vw;
+  width: 100%;
   height: 80vh;
   background-size: cover;
   background-image: url(img/intro_bg.59b15d84c75cf310e76cc40155b90dc6.jpg);
@@ -409,7 +409,7 @@ body {
 
 /* ZOOM CAR ADVANTAGES*/
 #home #zoom_adv {
-  width: 100vw;
+  width: 100%;
   height: 74vh;
   margin: 0%;
   padding: 0%;
@@ -462,7 +462,7 @@ body {
         background-position: 30% 0;*/
   background: url("img/supermilers_bg.ce8bf185500c5dd96a4c1034b89e6e0c.jpg")
     repeat top center / cover;
-  width: 100vw;
+  width: 100%;
   color: #fff;
   height: 480px;
   text-align: center;
@@ -965,7 +965,7 @@ body {
 }
 #supermillerhead {
   margin-top: 300px;
-  width: 100vw;
+  width: 100%;
   height: 80vh;
   background: url(/img/car_bg.jpg);
   background-size: cover;
@@ -1273,7 +1273,7 @@ body {
   display: grid;
   grid-template-columns: 50px 1250px 50px;
   grid-template-rows: auto;
-  width: 100%;
+  /* width: 100%; */
 }
 #last .press .arrowlast2 {
   height: 20px;
@@ -1333,152 +1333,200 @@ body {
 /* width: 200px;
          height: 50px; } */
 
-#last .footer {
-  background-color: rgb(51, 65, 79);
-  color: white;
-  margin-top: 50px;
-  height: 1650px;
-  width: 100%;
-  padding-top: 20px;
-}
-#last .footer .Button {
-  display: grid;
+#last {
+            margin-top: 10vh;
+             /* background-color: #eaeaea; */
+        }
 
-  grid-template-columns: 300px 300px 300px 300px;
+        #last .footer {
+            background-color: rgb(51, 65, 79);
+            color: white;
+            margin-top: 50px;
+            width: 100%;
+            padding-top: 20px;
+            box-sizing: border-box;
 
-  grid-template-rows: auto;
-  margin-left: 100px;
-  font-size: 18px;
-}
-#last .footer .Button button {
-  width: 300px;
-  border: thin;
-  background-color: rgb(51, 65, 79);
-  height: 150px;
-}
-#last .footer .Button .link {
-  /* border: 1px solid white; */
-  margin-left: 100px;
-  align-content: center;
-}
-#last .footer .Button .link img {
-  width: 50px;
-  margin-right: 100px;
-  padding-bottom: 5px;
-}
-#last .footer .Button button p {
-  font-size: 25px;
-  font-family: sans-serif;
-  font-weight: 200;
-  text-align: center;
-  text-decoration: none;
-  color: white;
-}
-#last .footer h4 {
-  text-align: center;
-  font-weight: 200;
-  font-size: 25px;
-  margin-left: 100px;
-  color: white;
-}
-#last .footer .aboutus {
-  display: grid;
-  grid-template-columns: 250px 250px 250px 250px;
-  grid-template-rows: auto auto;
-  grid-gap: 20px;
-  padding: 10px;
-  margin-left: 100px;
-}
-#last .footer .aboutus a {
-  color: white;
-  margin-left: 50px;
-  font-size: 14px;
-  text-decoration: none;
-}
-#last .footer .cities {
-  display: grid;
-  grid-template-columns: 250px 250px 250px 250px;
-  grid-template-rows: 50px 50px 50px 50px 50px 50px 50px;
-  /* padding: 20px; */
-  grid-gap: 20px;
-  padding: 10px;
-  margin-left: 100px;
-}
-#last .footer .cities .help {
-  margin-left: 50px;
-  font-size: 14px;
-  font-family: sans-serif;
-  color: white;
-  text-decoration: none;
-}
-#last .footer .cities a {
-  color: white;
+        }
 
-  font-size: 14px;
-  text-decoration: none;
-}
+        #last .footer .Button {
+            display: grid;
+            grid-template-columns: 210px 210px 210px 210px;
+            grid-template-rows: auto;
+            font-size: 14px;
+            width: 800px;
+            margin: auto;
+            /* background-color: black; */
+        }
 
-#last .footer .airport {
-  display: grid;
-  grid-template-columns: 280px 280px 280px 280px;
-  grid-template-rows: 50px 50px 50px 50px 50px 50px 50px;
-  padding: 20px;
-  /* grid-gap: 20px; */
-  padding: 10px;
-  margin-left: 100px;
-}
-#last .footer .airport a {
-  /* margin-left: 50px; */
-  color: white;
-  font-size: 14px;
-  text-decoration: none;
-  margin-left: 58px;
-}
+        #last .footer .Button button {
+            width: 210px;
+            border: thin;
+            background-color: rgb(51, 65, 79);
+            text-align: center;
+            height: 150px;
+        }
 
-#last .footer hr {
-  margin-top: -50px;
-  height: 2px;
-}
-#last .footer .address {
-  margin-left: 100px;
-}
-#last .footer .social img {
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-}
-#last .footer .address h4 {
-  text-align: left;
-  margin-left: 20px;
-  font-size: 20px;
-  color: rgb(173, 179, 184);
-}
-#last .footer .address p {
-  font-size: 20px;
-  color: rgb(173, 179, 184);
-  margin-left: 20px;
-}
-#last .address .social {
-  display: grid;
-  grid-template-columns: 50px 50px 50px 50px 50px 50px;
-  grid-template-rows: auto;
-  grid-gap: 20px;
-  padding: 20px;
-}
-#last .footer .content {
-  background-color: white;
+        #last .footer .Button .link {
+            /* border: 1px solid white; */
+            align-content: center;
+        }
+
+        #last .footer .Button .link img {
+            width: 50px;
+            padding-bottom: 5px;
+        }
+
+        #last .footer .Button button p {
+            font-size: 14px;
+            font-family: sans-serif;
+            font-weight: 200;
+            text-align: center;
+            text-decoration: none;
+            color: white;
+
+        }
+
+        #last .footer h4 {
+            text-align: center;
+            font-weight: 200;
+            font-size: 25px;
+            width: 180px;
+            margin: 15px auto;
+            color: white;
+
+        }
+
+        #last .footer .aboutus {
+            display: grid;
+            grid-template-columns: 250px 250px 250px 250px;
+            grid-template-rows: auto auto;
+            grid-gap: 15px 25px;
+            width: 1020px;
+            margin: auto;
+
+
+        }
+
+        #last .footer .aboutus>div {
+            width: 220px;
+            height: 50px;
+        }
+
+        #last .footer .aboutus a {
+            color: white;
+            font-size: 15px;
+            text-decoration: none;
+        }
+
+        #last .footer .cities {
+            display: grid;
+            grid-template-columns: 250px 250px 250px 250px;
+            grid-template-rows: 50px 50px 50px 50px 50px 50px 50px;
+            /* padding: 20px; */
+            grid-gap: 20px 25px;
+            width: 1020px;
+            margin: auto;
+            /* background-color: black; */
+        }
+
+        #last .footer .cities .help {
+            font-size: 14px;
+            font-family: sans-serif;
+            color: white;
+            text-decoration: none;
+            width: 200px;
+            height: 30px;
+            /* background-color: blanchedalmond; */
+
+        }
+
+        #last .footer .cities a {
+            color: white;
+            font-size: 14px;
+            text-decoration: none;
+        }
+
+        #last .footer .airport {
+            display: grid;
+            grid-template-columns: 220px 220px 220px 220px;
+            grid-template-rows: 50px 50px 50px 50px 50px;
+            grid-gap: 20px 60px;
+            width: 1020px;
+            margin: auto;
+            /* background-color: black; */
+        }
+
+        #last .footer .airport>div {
+            width: 220px;
+            height: 30px;
+            /* background-color: blanchedalmond */
+        }
+
+        #last .footer .airport a {
+            /* margin-left: 50px; */
+            color: white;
+            font-size: 14px;
+            text-decoration: none;
+        }
+
+        #last .footer hr {
+            margin-top: -0;
+            height: 2px;
+        }
+
+        #last .footer .address {
+            width: 1050px;
+            height: 200px;
+            margin: auto;
+        }
+
+        #last .footer .social img {
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+        }
+
+        #last .footer .address h4 {
+            margin-left: 1px;
+            font-size: 20px;
+            color: rgb(173, 179, 184);
+        }
+
+        #last .footer .address p {
+            font-size: 15px;
+            color: rgb(173, 179, 184);
+            margin-left: 5px;
+        }
+
+        #last .address .social {
+            display: grid;
+            grid-template-columns: 20px 20px 20px 20px 20px 20px;
+            grid-template-rows: auto;
+            grid-gap: 40px;
+            padding: 8px;
+
+        }
+       .contentInc{
+        width: 100%;
+         background-color: #eaeaea;
+         margin-top: -20px;
+      }  
+       .content {
+ 
   color: rgb(56, 54, 54);
   margin-left: 100px;
-  margin-top: 100px;
+  padding: 5px;
   width: 80vw;
-  font-size: 14px;
+  font-size: 13px;
 }
-#last .footer .content a {
+ .content a {
   text-decoration: none;
   color: green;
 }
-#last .footer .content h3 {
+ .content h3 {
   font-weight: 700;
-  font-size: 30px;
+  color: #323a44;
+  
+  font-size: 20px;
   font-family: sans-serif;
 }
