Updated image path

--- a/zoomcar/bookingpage/bookingPage.css
+++ b/zoomcar/bookingpage/bookingPage.css
@@ -120,7 +120,7 @@ body {
 }
 /*Hover Effect on navbar-SUBSCRIBE */
 .subscr-logo1 {
-  background-image: url(img/sub_logo.png);
+  background-image: url(../img/sub_logo.png);
   display: block;
   background-size: 120px;
   background-repeat: no-repeat;
@@ -184,7 +184,7 @@ body {
 
 /*Hover Effect on navbar-AMIGO */
 .amigo-logo2 {
-  background-image: url(img/amigo_logo.png);
+  background-image: url(../img/amigo_logo.png);
   display: block;
   background-size: 120px;
   background-repeat: no-repeat;
@@ -232,7 +232,7 @@ body {
 
 /*Hover Effect on navbar-ZMS */
 .zms-logo3 {
-  background-image: url(img/zms_logo.png);
+  background-image: url(../img/zms_logo.png);
   display: block;
   background-size: 120px;
   background-repeat: no-repeat;
@@ -436,7 +436,7 @@ body {
   height: 190px;
 }
 .btn_log_sub {
-  background: url(img/log_sub_btn.png) no-repeat top left / cover;
+  background: url(../img/log_sub_btn.png) no-repeat top left / cover;
   width: 70px;
   height: 70px;
   border: none;
@@ -618,7 +618,7 @@ body {
   height: 190px;
 }
 .btn_log_sub2 {
-  background: url(img/log_sub_btn.png) no-repeat top left / cover;
+  background: url(../img/log_sub_btn.png) no-repeat top left / cover;
   width: 70px;
   height: 70px;
   border: none;
