--- a/zoomcar/summary/summarypg.css
+++ b/zoomcar/summary/summarypg.css
@@ -133,7 +133,7 @@ body {
 
 /*Hover Effect on navbar-SUBSCRIBE */
 .subscr-logo1 {
-    background-image: url(img/sub_logo.png);
+    background-image: url(../img/sub_logo.png);
     display: block;
     background-size: 120px;
     background-repeat: no-repeat;
@@ -203,7 +203,7 @@ body {
 
 /*Hover Effect on navbar-AMIGO */
 .amigo-logo2 {
-    background-image: url(img/amigo_logo.png);
+    background-image: url(../img/amigo_logo.png);
     display: block;
     background-size: 120px;
     background-repeat: no-repeat;
@@ -256,7 +256,7 @@ body {
 
 /*Hover Effect on navbar-ZMS */
 .zms-logo3 {
-    background-image: url(img/zms_logo.png);
+    background-image: url(../img/zms_logo.png);
     display: block;
     background-size: 120px;
     background-repeat: no-repeat;
@@ -485,7 +485,7 @@ margin-right: 50px;
 }
 
 .btn_log_sub {
-    background: url(img/log_sub_btn.png) no-repeat top left / cover;
+    background: url(../img/log_sub_btn.png) no-repeat top left / cover;
     width: 70px;
     height: 70px;
     border: none;
@@ -689,7 +689,7 @@ margin-right: 50px;
 }
 
 .btn_log_sub2 {
-    background: url(img/log_sub_btn.png) no-repeat top left / cover;
+    background: url(../img/log_sub_btn.png) no-repeat top left / cover;
     width: 70px;
     height: 70px;
     border: none;
