--- a/zoomcar/pickupTime/pickupTime.css
+++ b/zoomcar/pickupTime/pickupTime.css
@@ -20,7 +20,7 @@ border: 4px solid yellowgreen;
 box-sizing: border-box;
 }
 #selectbar .sel_radiobox1{
-  background: url(img/rightmark_gr_box.png) center  / cover
+  background: url(../img/rightmark_gr_box.png) center  / cover
 }
 #selectbar .sel_hori_line1,
 .sel_hori_line2 {
