--- a/zoomcar/index/index.css
+++ b/zoomcar/index/index.css
@@ -115,7 +115,7 @@ body {
   }
   /*Hover Effect on navbar-SUBSCRIBE */
   .subscr-logo1 {
-    background-image: url(img/sub_logo.png);
+    background-image: url(../img/sub_logo.png);
     display: block;
     background-size: 120px;
     background-repeat: no-repeat;
@@ -178,7 +178,7 @@ body {
   
   /*Hover Effect on navbar-AMIGO */
   .amigo-logo2 {
-    background-image: url(img/amigo_logo.png);
+    background-image: url(../img/amigo_logo.png);
     display: block;
     background-size: 120px;
     background-repeat: no-repeat;
@@ -225,7 +225,7 @@ body {
   
   /*Hover Effect on navbar-ZMS */
   .zms-logo3 {
-    background-image: url(img/zms_logo.png);
+    background-image: url(../img/zms_logo.png);
     display: block;
     background-size: 120px;
     background-repeat: no-repeat;
@@ -342,7 +342,7 @@ body {
     width: 100%;
     height: 80vh;
     background-size: cover;
-    background-image: url(img/intro_bg.59b15d84c75cf310e76cc40155b90dc6.jpg);
+    background-image: url(../img/intro_bg.59b15d84c75cf310e76cc40155b90dc6.jpg);
     padding: 150px 0%;
     background-position: 40% 0;
     box-sizing: border-box;
@@ -460,7 +460,7 @@ body {
     margin: 0%;
     /*background-size: cover;
           background-position: 30% 0;*/
-    background: url("img/supermilers_bg.ce8bf185500c5dd96a4c1034b89e6e0c.jpg")
+    background: url("../img/supermilers_bg.ce8bf185500c5dd96a4c1034b89e6e0c.jpg")
       repeat top center / cover;
     width: 100%;
     color: #fff;
@@ -648,7 +648,7 @@ body {
     height: 190px;
   }
   .btn_log_sub {
-    background: url(img/log_sub_btn.png) no-repeat top left / cover;
+    background: url(../img/log_sub_btn.png) no-repeat top left / cover;
     width: 70px;
     height: 70px;
     border: none;
@@ -831,7 +831,7 @@ body {
     height: 190px;
   }
   .btn_log_sub2 {
-    background: url(img/log_sub_btn.png) no-repeat top left / cover;
+    background: url(../img/log_sub_btn.png) no-repeat top left / cover;
     width: 70px;
     height: 70px;
     border: none;
@@ -967,7 +967,7 @@ body {
     margin-top: 300px;
     width: 100%;
     height: 80vh;
-    background: url(/img/car_bg.jpg);
+    background: url(../img/car_bg.jpg);
     background-size: cover;
   }
   
@@ -1209,7 +1209,7 @@ body {
     width: 100%;
     text-align: center;
     background-size: 100%;
-    background: url(img/bg_image.jpg);
+    background: url(../img/bg_image.jpg);
   }
   #last .quotation {
     width: 100px;
