Updated Image path

--- a/zoomcar/offers/offers.css
+++ b/zoomcar/offers/offers.css
@@ -118,7 +118,7 @@ body {
 }
 /*Hover Effect on navbar-SUBSCRIBE */
 .subscr-logo1 {
-  background-image: url(img/sub_logo.png);
+  background-image: url(../img/sub_logo.png);
   display: block;
   background-size: 120px;
   background-repeat: no-repeat;
@@ -182,7 +182,7 @@ body {
 
 /*Hover Effect on navbar-AMIGO */
 .amigo-logo2 {
-  background-image: url(img/amigo_logo.png);
+  background-image: url(../img/amigo_logo.png);
   display: block;
   background-size: 120px;
   background-repeat: no-repeat;
@@ -230,7 +230,7 @@ body {
 
 /*Hover Effect on navbar-ZMS */
 .zms-logo3 {
-  background-image: url(img/zms_logo.png);
+  background-image: url(../img/zms_logo.png);
   display: block;
   background-size: 120px;
   background-repeat: no-repeat;
@@ -434,7 +434,7 @@ body {
   height: 190px;
 }
 .btn_log_sub {
-  background: url(img/log_sub_btn.png) no-repeat top left / cover;
+  background: url(../img/log_sub_btn.png) no-repeat top left / cover;
   width: 70px;
   height: 70px;
   border: none;
@@ -615,7 +615,7 @@ body {
   height: 190px;
 }
 .btn_log_sub2 {
-  background: url(img/log_sub_btn.png) no-repeat top left / cover;
+  background: url(../img/log_sub_btn.png) no-repeat top left / cover;
   width: 70px;
   height: 70px;
   border: none;
