--- a/zoomcar/summary/summarypg.css
+++ b/zoomcar/summary/summarypg.css
@@ -119,7 +119,7 @@ body {
 }
 /*Hover Effect on navbar-SUBSCRIBE */
 .subscr-logo1 {
-  background-image: url(img/sub_logo.png);
+  background-image: url(../img/sub_logo.png);
   display: block;
   background-size: 120px;
   background-repeat: no-repeat;
@@ -183,7 +183,7 @@ body {
 
 /*Hover Effect on navbar-AMIGO */
 .amigo-logo2 {
-  background-image: url(img/amigo_logo.png);
+  background-image: url(../img/amigo_logo.png);
   display: block;
   background-size: 120px;
   background-repeat: no-repeat;
@@ -231,7 +231,7 @@ body {
 
 /*Hover Effect on navbar-ZMS */
 .zms-logo3 {
-  background-image: url(img/zms_logo.png);
+  background-image: url(../img/zms_logo.png);
   display: block;
   background-size: 120px;
   background-repeat: no-repeat;
@@ -435,7 +435,7 @@ body {
   height: 190px;
 }
 .btn_log_sub {
-  background: url(img/log_sub_btn.png) no-repeat top left / cover;
+  background: url(../img/log_sub_btn.png) no-repeat top left / cover;
   width: 70px;
   height: 70px;
   border: none;
@@ -616,7 +616,7 @@ body {
   height: 190px;
 }
 .btn_log_sub2 {
-  background: url(img/log_sub_btn.png) no-repeat top left / cover;
+  background: url(../img/log_sub_btn.png) no-repeat top left / cover;
   width: 70px;
   height: 70px;
   border: none;
